tilføjer heading og text variabler på det hele

--- a/src/components/Button.astro
+++ b/src/components/Button.astro
@@ -4,9 +4,9 @@ const { variant } = Astro.props;
 const base = "rounded-4xl px-4 py-2 button cursor-pointer";
 
 const variants = {
-  header: "btn-header text-dark",
-  light: "btn-light text-dark",
-  dark: "btn-dark text-light",
+  header: "btn-header text-dark font-bold uppercase",
+  light: "btn-light text-dark font-bold uppercase",
+  dark: "btn-dark text-light font-bold uppercase",
 };
 ---
 
