--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -3,7 +3,7 @@ import Button from "./Button.astro";
 ---
 
 <header class="bg-nav">
-  <nav class="flex items-center justify-between p-4">
+  <nav class="flex items-center justify-between p-4 font-medium text-base">
     <div class="flex justify-between gap-2">
       <!-- Logo -->
       <img src="/logo.png" alt="Billede af The Red Vans logo" class="h-10" />
