--- a/src/components/Heading.Astro
+++ b/src/components/Heading.Astro
@@ -8,12 +8,12 @@ const {
 const Htmlheading = htmlheading;
 
 const sizeClasses = {
-  xlarge: "text-6xl md:text-4xl",
-  large: "text-4xl md:text-3xl",
-  medium: "text-3xl md:text-2xl",
-  small: "text-2xl md:text-xl",
-  xsmall: "text-2xl md:text-xl",
-  xxsmall: "text-xl md:text-lg",
+  xlarge: "lg:text-6xl text-4xl",
+  large: "lg:text-4xl text-3xl",
+  medium: "lg:text-3xl text-2xl",
+  small: "lg:text-2xl text-xl",
+  xsmall: "lg:text-2xl text-xl",
+  xxsmall: "lg:text-xl text-lg",
 };
 
 const defaultFontForSize = {
