--- a/src/pages/hvem-vi-er.astro
+++ b/src/pages/hvem-vi-er.astro
@@ -5,6 +5,8 @@ import HeadingParagraf from "../components/HeadingParagraf.astro";
 import Card from "../components/Card.astro";
 import TextParagraf from "../components/TextParagraf.astro";
 import Link from "../components/Link.astro";
+import Heading from "../components/Heading.astro";
+import Text from "../components/Text.astro";
 ---
 
 <MainLayout title="Hvem vi er">
@@ -16,7 +18,9 @@ import Link from "../components/Link.astro";
     <Button variant="light">Bliv frivillig</Button>
     <img src="frivillige.webp" alt="Billede af frivllige foran the red van" />
 
-    <h2>Sekretariatet</h2>
+    <Heading htmlheading="h2" size="large" stylingclasses="uppercase text-dark"
+      >Sekretariatet</Heading
+    >
     <div class="grid md:grid-cols-3">
       <Card
         image="om-os-jelena.webp"
@@ -44,27 +48,31 @@ import Link from "../components/Link.astro";
   </section>
   <section class="bg-pink">
     <TextParagraf title="Vores bestyrelse" textCols={1}>
-      <p class="p-medium">
+      <Text teksttype="brødtekstmedium" stylingclasses="text-dark">
         Vi tror på, at den bedste retning for organisationen findes i samspillet
         mellem dem, der har hænderne i arbejdet, og dem, der bidrager med
         perspektiver, netværk og specialiseret viden udefra. Vores bestyrelse
         gennemgår hvert år de gældende anbefalinger for “good governance” og
         udfylder dette skema, der beskriver, hvordan vi sikrer god ledelse i
         organisationen.
-      </p>
+      </Text>
     </TextParagraf>
     <div class="grid md:grid-cols-3">
       <div class="md:col-start-2 md:col-end-4">
         <img src="placeholder.webp" alt="" />
-        <p class="p-medium">
+        <Text teksttype="brødtekstmedium" stylingclasses="text-dark">
           Fra venstre: Mathilde Høyberg, Nadir Kadhim Hamza, Jelena Seidel,
           Jannet Van der Veen, Henrik Olsen, Rie Ljungmann, Yasmin Bahat, Maria
           Kloster Tolstrup, Anna Berg, Milena Bascuñan Skaarup
-        </p>
+        </Text>
       </div>
     </div>
     <div class="border-t-accent-red border-t">
-      <h2>Ledelsen</h2>
+      <Heading
+        htmlheading="h2"
+        size="medium"
+        stylingclasses="uppercase text-dark">Ledelsen</Heading
+      >
       <div class="grid md:grid-cols-4">
         <Card
           title="Forperson"
@@ -84,7 +92,11 @@ import Link from "../components/Link.astro";
       </div>
     </div>
     <div class="border-t-accent-red border-t">
-      <h2>Bestyrelsesmedlemmer</h2>
+      <Heading
+        htmlheading="h2"
+        size="medium"
+        stylingclasses="uppercase text-dark">Bestyrelsesmedlemmer</Heading
+      >
       <div class="grid md:grid-cols-4">
         <Card
           undertitle="Jannet Van der Veen"
@@ -116,7 +128,7 @@ import Link from "../components/Link.astro";
   </section>
   <section class="bg-green">
     <TextParagraf title="Vores retningslinjer for bestyrelsen" textCols={2}>
-      <p class="p-medium">
+      <Text teksttype="brødtekst" stylingclasses="text-dark">
         The Red Van ledes af en frivillig og ulønnet bestyrelse, som har det
         overordnede ansvar for foreningens strategi og udvikling. Bestyrelsen
         vælges demokratisk af de stemmeberettigede frivillige på
@@ -128,8 +140,8 @@ import Link from "../components/Link.astro";
         vælges en frivillig tillidsrepræsentant, som deltager i bestyrelsens
         arbejde med fokus på at varetage de frivilliges perspektiver – dog uden
         stemmeret. <br /><br />
-      </p>
-      <p class="p-medium">
+      </Text>
+      <Text teksttype="brødtekst" stylingclasses="text-dark">
         Bestyrelsesmedlemmer vælges for en toårig periode med forskudte valg, så
         der sikres kontinuitet. Inden valget fastsætter generalforsamlingen,
         hvor mange medlemmer der skal vælges. Kandidater kan stille op via to
@@ -143,7 +155,7 @@ import Link from "../components/Link.astro";
         kandidater blandt foreningens medlemmer i øvrigt <br /><br /> Bestyrelsens
         arbejde er frivilligt og ulønnet, men der kan i særlige tilfælde ydes honorar
         for ekstraopgaver, hvis bestyrelsen beslutter det.
-      </p>
+      </Text>
     </TextParagraf>
     <img src="stol.png" alt="Billede af rød stol" class="md:-mt-70" />
   </section>
