--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -2,7 +2,7 @@
 import Button from "./Button.astro";
 ---
 
-<header class="bg-nav">
+<header class="bg-nav px-gutter py-md">
   <nav class="flex items-center justify-between p-4">
     <div class="flex justify-between gap-2">
       <!-- Logo -->
