laver alt muligt

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -35,12 +35,38 @@ import Button from "./Button.astro";
 
     <!-- Menu (desktop) -->
     <ul class="hidden md:flex gap-5 text-hf">
-      <li><a href="#">Om os</a></li>
-      <li><a href="#">Bliv frivillig</a></li>
-      <li><a href="#">Viden</a></li>
-      <li><a href="#">Merch</a></li>
-      <li><a href="#">For sex workers</a></li>
-      <!-- <li><Button variant="header">Støt</Button></li> -->
+      <li>
+        <a
+          href="#"
+          class="transition-colors duration-500 ease-in-out hover:text-tertiary-darkpink"
+          >Om os</a
+        >
+      </li>
+      <li>
+        <a
+          href="#"
+          class="transition-colors duration-500 ease-in-out hover:text-tertiary-darkpink"
+          >Bliv frivillig</a
+        >
+      </li>
+      <li>
+        <a
+          href="#"
+          class="transition-colors duration-500 ease-in-out hover:text-tertiary-darkpink"
+          >Viden</a
+        >
+      </li>
+      <li>
+        <a
+          href="#"
+          class="transition-colors duration-500 ease-in-out hover:text-tertiary-darkpink"
+          >Merch</a
+        >
+      </li>
+      <li>
+        <a href="#" class="hover:text-tertiary-darkpink">For sex workers</a>
+      </li>
+      <li><Button variant="header">Støt</Button></li>
     </ul>
   </nav>
 </header>
