--- a/src/pages/vores-arbejde.astro
+++ b/src/pages/vores-arbejde.astro
@@ -45,28 +45,28 @@ import Text from "../components/Text.astro";
     </Heading>
     <div class="grid md:grid-cols-3">
       <Card
-        h3="Opkvalificering af unge"
-        text="Vi ser sexarbejde som et legitimt erhverv og støtter sexarbejderbevægelsens kamp for selvbestemmelse og afstigmatisering. Sexarbejderrettigheder er menneskerettigheder!"
+        header="Opkvalificering af unge"
+        text="Vi tilbyder løbende uddannelsesprogrammer og mentorskab til vores unge frivillige. Vores programmer fokuserer på at udvikle deres færdigheder og viden om sociale problemstillinger, så de kan håndtere komplekse udfordringer effektivt. Vi sikrer, at de får praktisk erfaring og støtte til at bidrage aktivt til vores mission og skabe positive forandringer."
       />
       <Card
-        h3="Undervisning"
-        text="Vi tilbyder gadebaserede sexarbejdere en mere sikker og værdig arbejdsplads, fordi alle har ret til støtte og solidaritet uanset deres profession og livssituation."
+        header="Undervisning"
+        text="Vi tilbyder oplæg og workshops til uddannelsesinstitutioner, fagpersoner, politikere, tænketanke, højskoler mfl. Vores undervisning handler om skadesreduktion for gadesexarbejdere fra et rettighedsperspektiv. Vi sigter mod at øge forståelsen og engagementet omkring sexarbejderrettigheder og bidrage til bedre viden og handling på området. Book os her."
       />
       <Card
-        h3="Pushing the political"
-        text="Vi mener, at sexarbejdere skal beskyttes med rettigheder frem for at blive reddet, fordi vi ved, at mange står uden alternative måder at forsørge sig selv og deres familier på."
+        header="Pushing the political"
+        text="Vi er aktive medspillere i at skubbe den politiske dagsorden og deltager i politiske møder og høringer for at påvirke beslutningstagere og fremme lovgivning, der beskytter sexarbejderes rettigheder. Vi opfordrer politikerne til at lytte til eksperterne og skabe en lovgivning, der beskytter sexarbejderes rettigheder og sikkerhed. Sexarbejdere skal have arbejdsretlig beskyttelse og politikerne skal sikre, at lovgivningen baseres på fakta frem for personlige og moralistiske idealer."
       />
       <Card
-        h3="Aktivisme"
-        text="Vi ser sexarbejde som et legitimt erhverv og støtter sexarbejderbevægelsens kamp for selvbestemmelse og afstigmatisering. Sexarbejderrettigheder er menneskerettigheder!"
+        header="Aktivisme"
+        text="Vi samarbejder med aktivister og er en del af den globale bevægelse for sexarbejderes rettigheder. Vi bidrager med ressourcer og mobiliserer støtte for at forbedre arbejdsvilkår og rettigheder. Vores mål er at skabe konkrete forbedringer og gøre vigtige emner synlige for beslutningstagere og offentligheden."
       />
       <Card
-        h3="Advocacy"
-        text="Vi tilbyder gadebaserede sexarbejdere en mere sikker og værdig arbejdsplads, fordi alle har ret til støtte og solidaritet uanset deres profession og livssituation."
+        header="Advocacy"
+        text="Hos The Red Van er vi stærke fortalere for sexarbejderes rettigheder. Vi arbejder aktivt for at ændre den offentlige mening og bekæmpe stigmaet omkring sexarbejde. Vores oplysningsarbejde fokuserer på at fremhæve sexarbejderes selvbestemmelse og menneskerettigheder samt behovet for arbejdsretlig beskyttelse. Vi bruger vores platform til at sikre at sexarbejderes perspektiver bliver hørt i den offentlige debat."
       />
       <Card
-        h3="Samarbejder"
-        text="Vi mener, at sexarbejdere skal beskyttes med rettigheder frem for at blive reddet, fordi vi ved, at mange står uden alternative måder at forsørge sig selv og deres familier på."
+        header="Samarbejder"
+        text="Vi allierer os med NGO’er, politikere og myndigheder for at skabe forandringer for sexarbejdere. Vores samarbejde omfatter aktører indenfor sundhed, jura, migration, stofbrug, voldsforebyggelse og social udsathed. Gennem brede partnerskaber arbejder vi målrettet på at finde løsninger og sikre, at sexarbejderes behov bliver anerkendt og adresseret effektivt. Vi er altid åbne for nye partnerskaber, så send os en mail hvis du gerne vil samarbejde med os!"
       />
     </div>
   </section>
