tilføjer spacing på forside

--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -18,7 +18,7 @@ const {
       <Heading
         htmlheading="h3"
         size="medium"
-        stylingclasses="uppercase text-dark"
+        stylingclasses="uppercase text-dark pt-xl"
       >
         {header}
       </Heading>
@@ -42,7 +42,7 @@ const {
       </Heading>
     )
   }
-  <Heading htmlheading="h6" size="xxsmall" stylingclasses="text-dark"
+  <Heading htmlheading="h6" size="xxsmall" stylingclasses="text-dark pt-sm"
     >{text}</Heading
   >
 </div>
