--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,81 +1,131 @@
 ---
 import Button from "./Button.astro";
+import Heading from "./Heading.astro";
 ---
 
-<header class="bg-nav">
-  <nav class="flex items-center justify-between p-4 font-medium text-base">
+<header
+  x-data="{ showmenu: false }"
+  class="bg-nav px-gutter py-md lg:px-2xl lg:py-lg"
+>
+  <nav class="flex flex-row items-center justify-between font-medium text-base">
     <div class="flex justify-between gap-2">
       <!-- Logo -->
-      <img src="/logo.png" alt="Billede af The Red Vans logo" class="h-10" />
+      <img
+        src="/logo.png"
+        alt="Billede af The Red Vans logo"
+        class="h-8.25 z-10"
+      />
 
       <img
         src="logo-text.png"
-        alt="The Red Van "
+        alt="The Red Van"
         class="hidden md:block md:w-70 lg:w-110"
       />
     </div>
-    <!-- Burger-knap (kun mobil) -->
-    <button id="burger" class="md:hidden flex flex-col gap-1.5 cursor-pointer">
-      <span class="block h-0.5 w-7 bg-pink"></span>
-      <span class="block h-0.5 w-7 bg-pink"></span>
-      <span class="block h-0.5 w-7 bg-pink"></span>
-    </button>
-
-    <!-- Mobil-menu -->
-    <div
-      id="mobileMenu"
-      class="fixed z-50 hidden flex-col gap-4 px-4 pb-4 md:hidden bg-bordeaux w-full text-hf"
-    >
-      <a href="#">Om os</a>
-      <a href="#">Bliv frivillig</a>
-      <a href="#">Viden</a>
-      <a href="#">Merch</a>
-      <a href="#">For sex workers</a>
-    </div>
 
     <!-- Menu (desktop) -->
-    <ul class="hidden md:flex gap-5 text-hf">
-      <li>
-        <a
-          href="#"
-          class="transition-colors duration-500 ease-in-out hover:text-tertiary-darkpink"
-          >Om os</a
-        >
-      </li>
-      <li>
-        <a
-          href="#"
-          class="transition-colors duration-500 ease-in-out hover:text-tertiary-darkpink"
-          >Bliv frivillig</a
-        >
-      </li>
-      <li>
-        <a
-          href="#"
-          class="transition-colors duration-500 ease-in-out hover:text-tertiary-darkpink"
-          >Viden</a
-        >
-      </li>
-      <li>
-        <a
-          href="#"
-          class="transition-colors duration-500 ease-in-out hover:text-tertiary-darkpink"
-          >Merch</a
-        >
-      </li>
-      <li>
-        <a href="#" class="hover:text-tertiary-darkpink">For sex workers</a>
-      </li>
-      <li><Button variant="header">Støt</Button></li>
-    </ul>
-  </nav>
-</header>
+    <div>
+      <ul class="hidden md:flex md:flex-row md:items-center gap-8 text-hf">
+        <li>
+          <a
+            href="#"
+            class="transition-colors duration-500 ease-in-out hover:text-tertiary-darkpink"
+            >Om os</a
+          >
+        </li>
+        <li>
+          <a
+            href="#"
+            class="transition-colors duration-500 ease-in-out hover:text-tertiary-darkpink"
+            >Bliv frivillig</a
+          >
+        </li>
+        <li>
+          <a
+            href="#"
+            class="transition-colors duration-500 ease-in-out hover:text-tertiary-darkpink"
+            >Viden</a
+          >
+        </li>
+        <li>
+          <a
+            href="#"
+            class="transition-colors duration-500 ease-in-out hover:text-tertiary-darkpink"
+            >Merch</a
+          >
+        </li>
+        <li>
+          <a href="#" class="hover:text-tertiary-darkpink">For sex workers</a>
+        </li>
+        <li><Button variant="header">Støt</Button></li>
+      </ul>
+    </div>
 
-<script>
-  const burger = document.getElementById("burger");
+    <!-- Burger-knap (kun mobil) -->
+    <button
+      id="burger"
+      class="md:hidden flex flex-col gap-1.5 cursor-pointer z-10"
+      x-on:click="showmenu = ! showmenu"
+    >
+      <span
+        class="block h-0.5 w-8 bg-pink transition-all duration-300"
+        :class="showmenu ? 'rotate-45 translate-y-2' : ''"></span>
+      <span
+        class="block h-0.5 w-8 bg-pink transition-all duration-300"
+        :class="showmenu ? 'opacity-0' : 'opacity-100'"></span>
+      <span
+        class="block h-0.5 w-8 bg-pink transition-all duration-300"
+        :class="showmenu ? '-rotate-45 -translate-y-2' : ''"></span>
+    </button>
+  </nav>
+
+  <!-- Mobil-menu -->
+  <div
+    id="mobilmenu"
+    x-show="showmenu"
+    x-transition
+    x-on:click="showmenu = false"
+    x-on:click.outside="showmenu = false"
+    class="fixed top-0 right-0 h-full w-full md:hidden bg-bordeaux flex flex-col items-center pt-30 gap-4 text-hf z-5 text-hf"
+  >
+    <Heading htmlheading="h2" size="large2" stylingclasses=""
+      ><a
+        class="transition-colors duration-500 ease-in-out hover:text-tertiary-darkpink"
+        href="#">Om os</a
+      >
+    </Heading>
+    <Heading htmlheading="h2" size="large2" stylingclasses=""
+      ><a
+        class="transition-colors duration-500 ease-in-out hover:text-tertiary-darkpink"
+        href="#">Bliv frivillig</a
+      >
+    </Heading>
+    <Heading htmlheading="h2" size="large2" stylingclasses=""
+      ><a
+        class="transition-colors duration-500 ease-in-out hover:text-tertiary-darkpink"
+        href="#">Viden</a
+      >
+    </Heading>
+    <Heading htmlheading="h2" size="large2" stylingclasses=""
+      ><a
+        class="transition-colors duration-500 ease-in-out hover:text-tertiary-darkpink"
+        href="#">Merch</a
+      >
+    </Heading>
+    <Heading htmlheading="h2" size="large2" stylingclasses=""
+      ><a
+        class="transition-colors duration-500 ease-in-out hover:text-tertiary-darkpink"
+        href="#">For sex workers</a
+      >
+    </Heading>
+  </div>
+
+  <!-- <script>
+      const burger = document.getElementById("burger");
   const mobileMenu = document.getElementById("mobileMenu");
 
   burger?.addEventListener("click", () => {
     mobileMenu?.classList.toggle("hidden");
   });
-</script>
+</script> -->
+</header>
