--- a/src/components/Heading.Astro
+++ b/src/components/Heading.Astro
@@ -9,6 +9,7 @@ const Htmlheading = htmlheading;
 
 const sizeClasses = {
   xlarge: "lg:text-6xl text-4xl",
+  large2: "lg:text-5xl text-3xl",
   large: "lg:text-4xl text-3xl",
   medium: "lg:text-3xl text-2xl",
   small: "lg:text-2xl text-xl",
@@ -18,6 +19,7 @@ const sizeClasses = {
 
 const defaultFontForSize = {
   xlarge: "font-black",
+  large2: "font-regular",
   large: "font-black",
   medium: "font-black",
   small: "font-black",
