--- a/src/components/HeadingParagraf.astro
+++ b/src/components/HeadingParagraf.astro
@@ -4,12 +4,15 @@ const { title, text } = Astro.props;
 ---
 
 <div class="grid md:grid-cols-3">
-  <Heading htmlheading="h1" size="xlarge" stylingclasses="text-dark uppercase"
-    >{title}</Heading
+  <Heading
+    htmlheading="h1"
+    size="xlarge"
+    stylingclasses="text-dark uppercase pb-md">{title}</Heading
   >
   <Heading
     htmlheading="h2"
     size="xsmall"
-    stylingclasses="text-dark md:col-start-2 md:col-span-2">{text}</Heading
+    stylingclasses="text-dark md:col-start-2 md:col-span-2 pb-3xl"
+    >{text}</Heading
   >
 </div>
